jvm version, description field support, bugfixes